--- a/deno.json
+++ b/deno.json
@@ -9,6 +9,7 @@
     "start": "deno run --allow-net --allow-env --allow-sys --allow-read --watch server.ts"
   },
   "imports": {
+    "@kubernetes/client-node": "npm:@kubernetes/client-node@^1.4.0",
     "dotenv": "npm:dotenv@^17.2.3",
     "express": "npm:express@^5.2.1",
     "mongoose": "npm:mongoose@^8.19.1"
