--- a/deno.json
+++ b/deno.json
@@ -10,6 +10,7 @@
   },
   "imports": {
     "@kubernetes/client-node": "npm:@kubernetes/client-node@^1.4.0",
+    "cors": "npm:cors@^2.8.6",
     "dotenv": "npm:dotenv@^17.2.3",
     "express": "npm:express@^5.2.1",
     "mongoose": "npm:mongoose@^8.19.1"
